--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.10.3",
+    "node-fetch": "^3.3.2",
     "sequelize": "^6.37.3"
   }
 }
